--- a/my_collections/_experiences/2018-02-13-Areva.md
+++ b/my_collections/_experiences/2018-02-13-Areva.md
@@ -5,7 +5,7 @@ subtitle: Intern – Configuration Team
 startdate: Mar.
 enddate: Sept. 2017
 location: Paris, France
-category: PROFESSIONAL EXPERIENCES
-website: "https://www.rolandberger.com/en/?country=GB"
+category: WORK EXPERIENCE
+website: ""
 ---
 - Structured the database containing technical modifications inherited from the Flamanville Nuclear Power Plant.
