--- a/my_collections/_experiences/2019-02-13-4D.md
+++ b/my_collections/_experiences/2019-02-13-4D.md
@@ -5,7 +5,7 @@ subtitle: Professional Services Team - Project manager
 startdate: 2019
 enddate: 2021
 location: San Jose, USA
-category: PROFESSIONAL EXPERIENCES
+category: WORK EXPERIENCE
 website: ""
 ---
 - Led teams of 3+ developers in the end-to-end execution of software projects, ensuring top-down oversight at every stage.
