--- a/my_collections/_experiences/2019-02-13-EEDP.md
+++ b/my_collections/_experiences/2019-02-13-EEDP.md
@@ -5,7 +5,7 @@ subtitle:  EEDP – Edison Engineering Development Program
 startdate: 2017
 enddate: 2017
 location: Belfort-Paris, France
-category: EDUCATION
+category: WORK EXPERIENCE
 website: ""
 ---
 Two-year early career program consisting of four rotational assignments. Combining advanced engineering coursework (10+ hours/week) with valuable work experience.
