--- a/my_collections/_experiences/2019-02-13-GEHC.md
+++ b/my_collections/_experiences/2019-02-13-GEHC.md
@@ -5,7 +5,7 @@ subtitle: Women Health Imaging Service Team - Responsible for digitalization tra
 startdate: 2019
 enddate: 2021
 location: Paris, France
-category: PROFESSIONAL EXPERIENCES
+category: WORK EXPERIENCE
 website: ""
 ---
 - Developed predictive maintenance models in Python, saving costs & unplanned downtime. Engineered rules for automated alerts before a failure occurs on a machine (20k$/year/rule saved). 
