--- a/my_collections/_experiences/2011-09-01-Livet.md
+++ b/my_collections/_experiences/2011-09-01-Livet.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Lycée Livet
-subtitle: PPREPARATORY CLASS – PHYSICS, MATHEMATICS & INDUSTRIAL SCIENCES 
+subtitle: Preparatory Class – Physics, Mathematics & Industrial Sciences 
 startdate: 2011
 enddate: 2013
 location: Nantes, France
