--- a/my_collections/_experiences/2013-02-13-Arts.md
+++ b/my_collections/_experiences/2013-02-13-Arts.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: ARTS ET METIERS PARISTECH 
-subtitle: GRANDE ÉCOLES D’INGÉNIEURS – ENGINEERING SCHOOL
+title: Arts et Métiers ParisTech
+subtitle: Grande École d’Iingéieurs – Engineering School
 startdate: 2013
 enddate: 2015
 location: Lille, France
