--- a/my_collections/_experiences/2014-02-13-JiaoTong.md
+++ b/my_collections/_experiences/2014-02-13-JiaoTong.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: SHANGHAI JIAO TONG UNIVERSITY
-subtitle: Ms in MATERIALS SCIENCE & ENGINEERING
+title: Shanghai Jiao Tong University
+subtitle: MS in Materials Science & Engineering
 startdate: 2015
 enddate: 2017
 location: Lyon, France
