--- a/my_collections/_experiences/2019-02-13-4D.md
+++ b/my_collections/_experiences/2019-02-13-4D.md
@@ -2,8 +2,8 @@
 layout: post
 title: 4D – Database Management System & IDE
 subtitle: Professional Services Team - Project manager
-startdate: 2019
-enddate: 2021
+startdate: 2021
+enddate: current
 location: San Jose, USA
 category: WORK EXPERIENCE
 website: ""
