--- a/my_collections/_experiences/2014-02-13-JiaoTong.md
+++ b/my_collections/_experiences/2014-02-13-JiaoTong.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: Shanghai Jiao Tong University
-subtitle: MS in Materials Science & Engineering
+subtitle: Ms in Materials Science & Engineering
 startdate: 2015
 enddate: 2017
-location: Lyon, France
+location: Shanghai, China
 category: EDUCATION
 website: ""
 ---
