--- a/my_collections/_posts/2019-02-13-EEDP.md
+++ b/my_collections/_posts/2019-02-13-EEDP.md
@@ -4,11 +4,11 @@ title: Edison Engineering Development Program
 categories: [Power, EEDP]
 ---
 
-As a young engineer, I integrated the [Edison Engineering Development Program](https://www.youtube.com/watch?v=TgW13yA6KRg), a program for young graduate which offers the opportunity to work on several engineering projects (4 rotations) at General Electric.
+As a young engineer, I integrated the Edison Engineering Development Program, a program for graduates which offers the opportunity to work on several engineering projects (4 rotations) at General Electric.
 
 ## 1st Rotation – GE Gas Power Systems, New Products Introduction Team
 
-![6F01 Gas Turbine](/images/6f01.jpg)
+![6F01 Gas Turbine](/images/6F01.jpg)
 
 **Where I Was:** I started in the *New Products Instrumentation team*, responsible for introducing and developing new accessories for gas turbines.
 
