--- a/my_collections/_posts/2019-02-13-EEDP.md
+++ b/my_collections/_posts/2019-02-13-EEDP.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Edison Engineering Development Program
-categories: [Power, EEDP]
+categories: [Power, Edison Engineering Program, General Electric]
 ---
 
 As a young engineer, I integrated the Edison Engineering Development Program.
