--- a/my_collections/_posts/2021-06-01-GEHC.md
+++ b/my_collections/_posts/2021-06-01-GEHC.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: GE Health Care Service Team
-categories: [GEHC]
+categories: [Healthcare, General Electric]
 ---
 
 After completing a graduate program at GE Power, I joined the GE Healthcare service team where I actively contributed to the digital transformation of the Service team.
