--- a/my_collections/_experiences/2014-06-01-Language.md
+++ b/my_collections/_experiences/2014-06-01-Language.md
@@ -8,4 +8,4 @@ location:
 category: LANGUAGE & SKILLS
 website: ""
 ---
-- French: Native | English: Fluent | Chinese: Intermediate
+- **French**: Native | **English**: Fluent | **Chinese**: Intermediate
