--- a/my_collections/_experiences/2017-03-01-Areva.md
+++ b/my_collections/_experiences/2017-03-01-Areva.md
@@ -8,4 +8,4 @@ location: Paris, France
 category: WORK EXPERIENCE
 website: ""
 ---
-- Structured the database containing technical modifications inherited from the Flamanville Nuclear Power Plant.
+- Structured the database containing technical modifications inherited from the **Flamanville Nuclear Power Plant**.
