--- a/my_collections/_experiences/2019-02-13-GEHC.md
+++ b/my_collections/_experiences/2019-02-13-GEHC.md
@@ -8,7 +8,7 @@ location: Paris, France
 category: WORK EXPERIENCE
 website: ""
 ---
-- Developed predictive maintenance models in Python, saving costs & unplanned downtime. Engineered rules for automated alerts before a failure occurs on a machine (20k$/year/rule saved). 
-- Lead projects for monitoring new machines logs as part of the company data strategy, supporting databases development (Oracle, Greenplum, MySQL) using Spoon & Logstash.
-- Created automated tools for maintenance costs calculation (based on Natural Language Processing models)
+- Developed **predictive maintenance** models in Python, saving costs & unplanned downtime. Engineered rules for automated alerts before a failure occurs on a machine (20k$/year/rule saved). 
+- Lead projects for monitoring new **machines logs** as part of the company data strategy, supporting databases development (Oracle, Greenplum, MySQL) using Spoon & Logstash.
+- Created automated tools for **maintenance costs calculation** (based on Natural Language Processing models)
 - Lead a team of 3 to develop a new feature for a service platform (500+ hospitals using the feature)
