--- a/my_collections/_experiences/2013-02-13-Arts.md
+++ b/my_collections/_experiences/2013-02-13-Arts.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Arts et Métiers ParisTech
-subtitle: Grande École d’Iingéieurs – Engineering School
+subtitle: Grande École d’Ingénieurs – Engineering School
 startdate: 2013
 enddate: 2015
 location: Lille, France
