--- a/my_collections/_experiences/2019-02-13-GEHC.md
+++ b/my_collections/_experiences/2019-02-13-GEHC.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: General Electric – GE Healthcare
-subtitle: Women Health Imaging Service Team - Responsible for digitalization transformation 
+subtitle: Women Health Imaging Service Team - Responsible for digital transformation 
 startdate: 2019
 enddate: 2021
 location: Paris, France
