--- a/my_collections/_experiences/2021-06-13-4D.md
+++ b/my_collections/_experiences/2021-06-13-4D.md
@@ -8,6 +8,6 @@ location: San Jose, USA
 category: WORK EXPERIENCE
 website: ""
 ---
-- Led teams of 3+ developers in the end-to-end execution of software projects, ensuring top-down oversight at every stage.
+- Led teams of 3+ developers in the end-to-end **execution of software projects**, ensuring top-down oversight at every stage.
 - Successfully managed multiple concurrent projects (10+ software developments per year).
 - Conducted client meetings, including high-level executives, to discuss project progress and requirements.
