--- a/my_collections/_posts/2017-09-01-JiaoTong.md
+++ b/my_collections/_posts/2017-09-01-JiaoTong.md
@@ -15,11 +15,13 @@ As the demand for metal matrix composites (MMCs) with high mechanical performanc
 A [metal matrix composite (MMC)](https://en.wikipedia.org/wiki/Metal_matrix_composite) is a material comprising at least two constituents, one being a metal and the other possibly a different metal, ceramic, or organic compound. MMCs are extensively used in aerospace due to their exceptional mechanical properties and isotropy. This study aligns with the trend of MMC research and focuses on silicon carbide particles reinforced aluminum composites, emphasizing their interface properties.
 
 ## Nanoindentation Process
-
 [Nanoindentation](https://en.wikipedia.org/wiki/Nanoindentation) is a material characterization technique that assesses modulus and microhardness at the nanoscale. The indentation test involves applying load using a tip of various shapes (e.g., Berkovich, spherical, conical) and recording indentation depth and load to calculate material properties.
+![Nanoindentation Process](/images/nanoindentation.png)
+*Nanoindentation Process*
 
 ## Experimentation
-
+![SiCparticule nanoindentation process](/images/SiCparticule.png)
+*SiCparticule nanoindentation process*
 Nanoindentation experiments were conducted on aluminum matrix composites with various matrices: Pure Al, Al6061, Al2A14, and Al2024. Results showed that modulus and hardness at the particle-matrix interface strongly depend on the matrix nature, particularly its yield stress. Variations in hardness and modulus are linked to the angle formed between the particle and the matrix. Experimental results were summarized as follows:
 
 | Matrix   | Modulus (GPa) | Hardness (GPa) |
@@ -30,9 +32,11 @@ Nanoindentation experiments were conducted on aluminum matrix composites with va
 | Pure Al  | [80; 150]     | [2; 15]        |
 
 ## Simulation
-
+![Simulation](/images/simulation1.png)
+*Simulation*
 A 3D model was developed using the Python Abaqus library to simulate the nanoindentation process. The model used a C3D8 mesh for efficient computation time and accurate results. Corrections were applied to matrices' yield strength and cohesive surfaces to match experimental outcomes. The model revealed a correlation between particle angle and mechanical properties, with spherical particles exhibiting higher properties.
 
 ## Results
-
+![Simulation](/images/SomeResultsThesis2.png)
+*Load-displacement curves*
 Load-displacement curves for various interface angles were analyzed and compared between experiments and simulations. An increase in the angle between the particle and matrix correlated with higher modulus and hardness. Differences between experimental and simulated results were attributed to tip bluntness, geometrically necessary dislocations (GNDs), and grain orientation.
